--- a/OCR_Sample/ocr_demo.ipynb
+++ b/OCR_Sample/ocr_demo.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyocr in /usr/local/lib/python3.6/dist-packages\n",
-      "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages/Pillow-8.0.1-py3.6-linux-aarch64.egg (from pyocr)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install pyocr"
    ]
@@ -34,23 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading package lists... Done\n",
-      "Building dependency tree       \n",
-      "Reading state information... Done\n",
-      "tesseract-ocr is already the newest version (4.00~git2288-10f4998a-2).\n",
-      "0 upgraded, 0 newly installed, 0 to remove and 102 not upgraded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!apt-get install tesseract-ocr"
+    "!apt-get update\n",
+    "!apt-get install -y tesseract-ocr"
    ]
   },
   {
@@ -64,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tesseract 4.0.0-beta.1\n",
-      " leptonica-1.75.3\n",
-      "  libgif 5.1.4 : libjpeg 8d (libjpeg-turbo 1.5.2) : libpng 1.6.34 : libtiff 4.0.9 : zlib 1.2.11 : libwebp 0.6.1 : libopenjp2 2.3.0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!tesseract -v"
    ]
@@ -93,36 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2021-08-27 04:56:56--  https://github.com/tesseract-ocr/tessdata/blob/4.0.0/jpn.traineddata?raw=true\n",
-      "Resolving github.com (github.com)... 52.69.186.44\n",
-      "Connecting to github.com (github.com)|52.69.186.44|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://github.com/tesseract-ocr/tessdata/raw/4.0.0/jpn.traineddata [following]\n",
-      "--2021-08-27 04:56:56--  https://github.com/tesseract-ocr/tessdata/raw/4.0.0/jpn.traineddata\n",
-      "Reusing existing connection to github.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/tesseract-ocr/tessdata/4.0.0/jpn.traineddata [following]\n",
-      "--2021-08-27 04:56:57--  https://raw.githubusercontent.com/tesseract-ocr/tessdata/4.0.0/jpn.traineddata\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 35659159 (34M) [application/octet-stream]\n",
-      "Saving to: 'jpn.traineddata'\n",
-      "\n",
-      "jpn.traineddata     100%[===================>]  34.01M  10.6MB/s    in 3.2s    \n",
-      "\n",
-      "2021-08-27 04:57:00 (10.6 MB/s) - 'jpn.traineddata' saved [35659159/35659159]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://github.com/tesseract-ocr/tessdata/blob/4.0.0/jpn.traineddata?raw=true -O jpn.traineddata"
    ]
@@ -154,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,17 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "あ い う え お\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = Image.open(\"test1.png\")\n",
     "builder = pyocr.builders.TextBuilder(tesseract_layout=3)\n",
@@ -208,17 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/dev/video0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls /dev/video0"
    ]
@@ -235,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,24 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "626a2a762954447494ea16edee79beb0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets\n",
     "from IPython.display import display\n",
@@ -302,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,38 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b94c8c0ee20430eb6d548ce3650f32b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Button(description='ocr', style=ButtonStyle()),))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "626a2a762954447494ea16edee79beb0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(tool_widget)\n",
     "display(image_widget)\n",
@@ -419,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,6 +326,13 @@
     "import os\n",
     "os._exit(00)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
